# pick

./: .gitignore  dev.byk.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: build-server.mjs
server/: package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
server/bykpick/: byksdk.py  cli.py  controller.py
server/src/: app.ts  index.ts  types.ts
server/src/lib/: network.ts  spa.ts  state-store.ts  utils.ts
server/src/routes/: admin.ts  files.ts  items.ts  pick.ts
server/src/services/: pick.service.ts
src/: App.vue  main.ts  router.ts  styles.css  types.ts
src/bykpick/: cli.py  controller.py  service.py  utils.py
src/components/: Admin.vue  ItemPick.vue  Login.vue
src/composables/: useAnimation.ts  useFilePick.ts
web-ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web-ui/src/: api.ts
web-ui/src/components/: FilePick.vue
web-ui/src/composables/: useAdmin.ts  useFreePick.ts  usePick.ts
