[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "byk-pick"
version = "2026.6.9"
description = "web-based random picker and file lottery."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "byksdk>=0.1.0,<1.0.0",
    "click>=8.0.0",
    "flask>=2.0",
    "pyperclip>=1.9.0,<2.0.0",
    "waitress>=2.0.0",
    "psutil>=5.9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"], include = ["bykpick*"] } }

[tool.setuptools.package-data]
bykpick = ["dist/**/*"]
